@@ -8,7 +8,9 @@ subjectProfileLinePlot(data, paramValueVar,
   paramLab = toString(getLabelVar(paramValueVar, labelVars = labelVars)),
   paramNameVar = NULL, paramValueRangeVar = NULL, colorVar = NULL,
   colorLab = getLabelVar(colorVar, labelVars = labelVars),
-  colorPalette = NULL, paramGroupVar = NULL, timeVar,
+  colorPalette = NULL, shapeVar = colorVar,
+  shapeLab = getLabelVar(shapeVar, labelVars = labelVars),
+  shapePalette = NULL, paramGroupVar = NULL, timeVar,
   subjectVar = "USUBJID", subsetVar = NULL, subsetValue = NULL,
   xLab = getLabelVar(timeVar, labelVars = labelVars), yLab = "",
   timeLim = NULL, title = paramLab, label = title, labelVars = NULL,
@@ -27,11 +29,17 @@ subjectProfileLinePlot(data, paramValueVar,
 with minimum and maximum range for \code{paramValueVar},
 e.g. to represent the reference range of the variable.}
 
-\item{colorVar}{string, variable of \code{data} with color.}
+\item{colorVar}{string, variable of \code{data} with color, used for the points only.}
 
 \item{colorLab}{string, label for \code{colorVar}}
 
 \item{colorPalette}{named vector with color for \code{colorVar}}
+
+\item{shapeVar}{string, variable of \code{data} with shape, used for the points only.}
+
+\item{shapeLab}{string, label for \code{shapeVar}}
+
+\item{shapePalette}{named vector with shape for \code{shapeVar}}
 
 \item{paramGroupVar}{(optional) character vector with variable(s) of \code{data} with grouping.
 If specified, the parameters will be grouped by this(these) variable(s) in the y-axis.}
